# A_Parallels

./: .gitmodules  README.md  README_RUS.md
src/: Makefile
src/AntColonyAlgorithm/: AntColony.h  AntColony_2.0.h  Helpers.h  Makefile  a.out  interface.cc  test.cc
src/AntColonyAlgorithm/thread/: m_thread.cc
src/SystemsOfLinearEquationsSolve/: CMakeLists.txt  SLAEGauss.cc  SLAEGauss.h  test.cc
src/SystemsOfLinearEquationsSolve/tests/: GaussSpeedTest.cc  GaussSpeedTest.h  main.cc
src/WinogradAlgorithm/: Makefile  Winograd copy.h  Winograd copy_func_ar.h  Winograd.h  interface.cc  interface.h  test.cc  winograd.h  winograd_parallel.h  winograd_pipeline.h
src/WinogradAlgorithm/old/: Winograd copy 2.h  Winograd_rrr.h
src/WinogradAlgorithm/tests/: functional.cc  level_load.cc  pipeline.cc  speed_compare.cc  tests.h
src/sub/ConsoleInterface/: ConsoleInterface.cc
src/sub/matrix/: CMakeLists.txt  Makefile  blas.h  matrix.h  test.cc
src/sub/matrix/old/: matrix.h  speed_test.cc
src/sub/matrix/openCL/: cl_matrix.h
src/sub/thread/: m_thread.cc  m_thread.h  test.cc
src/sub/thread_pipeline/: CMakeLists.txt  dummy.cc  test.cc  test2.cc  thread_pipeline.h
src/sub/utility/: CMakeLists.txt  m_random.h  m_sstr.h  m_time.h  test.cc  utility.h
src/thread/: m_thread.cc  m_thread.h  test.cc
